--- a/ml/models_experimenting.ipynb
+++ b/ml/models_experimenting.ipynb
@@ -5,7 +5,7 @@
    "id": "77d0b116",
    "metadata": {},
    "source": [
-    "# Testing models from various libraries"
+    "# Trying models from various libraries"
    ]
   },
   {
